# meet-the-professor

./: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: layout.js  page.js  professors.jsx
src/app/components/: Credits.jsx  Dialogue.jsx  Form.jsx  Game.jsx  Homepage.jsx  Instructions.jsx  Round.jsx  RustTest.jsx  StartPage.jsx  Welcome.jsx
